force-app/main/default/objects/PerformanceLog__c/fields/CpuTimeMS__c.field-meta.xml
<CustomField>
    <fullName>CpuTimeMS__c</fullName>
    <label>CpuTimeMS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>