force-app/main/default/objects/PerformanceLog__c/fields/DMLRows__c.field-meta.xml
<CustomField>
    <fullName>DMLRows__c</fullName>
    <label>DMLRows</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>