force-app/main/default/objects/PerformanceLog__c/fields/DMLStatements__c.field-meta.xml
<CustomField>
    <fullName>DMLStatements__c</fullName>
    <label>DMLStatements</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>