force-app/main/default/objects/PerformanceLog__c/fields/ExecutionTimeMS__c.field-meta.xml
<CustomField>
    <fullName>ExecutionTimeMS__c</fullName>
    <label>ExecutionTimeMS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>