force-app/main/default/objects/PerformanceLog__c/fields/GovernorLimitsUsed__c.field-meta.xml
<CustomField>
    <fullName>GovernorLimitsUsed__c</fullName>
    <label>GovernorLimitsUsed</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>