force-app/main/default/objects/PerformanceLog__c/fields/HeapSizeBytes__c.field-meta.xml
<CustomField>
    <fullName>HeapSizeBytes__c</fullName>
    <label>HeapSizeBytes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>