force-app/main/default/objects/PerformanceLog__c/fields/SOQLRows__c.field-meta.xml
<CustomField>
    <fullName>SOQLRows__c</fullName>
    <label>SOQLRows</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>